--- a/SFML Template/SFML Template.vcxproj
+++ b/SFML Template/SFML Template.vcxproj
@@ -144,6 +144,7 @@
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="Window\Window.cpp" />
+    <ClCompile Include="WorldGen.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ActionHandler.h" />
@@ -153,6 +154,7 @@
     <ClInclude Include="ID.h" />
     <ClInclude Include="Player.h" />
     <ClInclude Include="Window\Window.h" />
+    <ClInclude Include="WorldGen.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
