--- a/SFML Template/SFML Template.vcxproj
+++ b/SFML Template/SFML Template.vcxproj
@@ -137,6 +137,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="ActionHandler.cpp" />
+    <ClCompile Include="Block.cpp" />
     <ClCompile Include="CustomView.cpp" />
     <ClCompile Include="Entity.cpp" />
     <ClCompile Include="Game.cpp" />
@@ -148,6 +149,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ActionHandler.h" />
+    <ClInclude Include="Block.h" />
     <ClInclude Include="CustomView.h" />
     <ClInclude Include="Entity.h" />
     <ClInclude Include="Game.h" />
