--- a/SFML Template/SFML Template.vcxproj
+++ b/SFML Template/SFML Template.vcxproj
@@ -143,6 +143,7 @@
     <ClCompile Include="CustomView.cpp" />
     <ClCompile Include="Entity.cpp" />
     <ClCompile Include="Game.cpp" />
+    <ClCompile Include="gameText.cpp" />
     <ClCompile Include="ID.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Player.cpp" />
@@ -155,6 +156,7 @@
     <ClInclude Include="CustomView.h" />
     <ClInclude Include="Entity.h" />
     <ClInclude Include="Game.h" />
+    <ClInclude Include="gameText.h" />
     <ClInclude Include="ID.h" />
     <ClInclude Include="Player.h" />
     <ClInclude Include="Window\Window.h" />
